appId: uk.gleissner.c64commander
tags:
  - hvsc-perf
  - hvsc-perf-playlist
  - device
env:
  LONG_TIMEOUT: ${LONG_TIMEOUT || "180000"}
  SHORT_TIMEOUT: ${SHORT_TIMEOUT || "5000"}
  TIMEOUT: ${TIMEOUT || "30000"}
---
- runFlow: subflows/launch-and-wait.yaml
- tapOn:
    text: "Play"
- extendedWaitUntil:
    visible: "Playlist"
    timeout: ${TIMEOUT}
- scrollUntilVisible:
    element:
      id: "add-items-to-playlist"
    direction: DOWN
    timeout: ${TIMEOUT}
- tapOn:
    id: "add-items-to-playlist"
- extendedWaitUntil:
    visible: "Choose source"
    timeout: ${TIMEOUT}
- retry:
    maxRetries: 6
    commands:
      - tapOn:
          id: "import-option-hvsc"
          optional: true
      - tapOn:
          text: "Add file / folder from HVSC"
          optional: true
      - tapOn:
          text: "HVSC"
          optional: true
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible: "From HVSC"
          timeout: ${TIMEOUT}
- extendedWaitUntil:
    visible: "Select DEMOS"
    timeout: ${TIMEOUT}
- tapOn: "Select DEMOS"
- extendedWaitUntil:
    visible: "Select GAMES"
    timeout: ${TIMEOUT}
- tapOn: "Select GAMES"
- extendedWaitUntil:
    visible: "Select MUSICIANS"
    timeout: ${TIMEOUT}
- tapOn: "Select MUSICIANS"
- waitForAnimationToEnd
- tapOn: "Add to playlist"
- extendedWaitUntil:
    visible: "Items added"
    timeout: ${LONG_TIMEOUT}
- assertVisible: "Playlist"
